use unminfied for dist so that sourcemaps work

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <main id="main"></main>
 
     <!-- DONT EDIT THE FOLLOWING LINE - NEEDED FOR BUILD -->
-    <script src="js/app.min.js"></script>
+    <script src="js/app.js"></script>
 
   </body>
 
